base/file/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myservice
  namespace: servpy
spec:
  selector:
    app: file
    appgrp: usertestsys
  ports:
    - name: myport
      protocol: TCP
      port: 80
      targetPort: 80
